# qyra

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/qyra/: __init__.py  _internal.py  client.py  config.py  health.py  instrument.py  telemetry.py
tests/: test_smoke.py  test_telemetry_features.py  test_v011.py  test_v013.py
