[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "qyra"
version = "0.1.5"
description = "Production infrastructure for HyperCycle AIMs — telemetry, retries, health, and inter-AIM routing."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Qyratech", email = "info@qyrafund.com" },
]
keywords = ["hypercycle", "aim", "ioai", "observability", "telemetry", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Framework :: FastAPI",
]
dependencies = [
    "httpx>=0.27.0,<1.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.100.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/qyratech/qyra"
Documentation = "https://github.com/qyratech/qyra#readme"
Repository = "https://github.com/qyratech/qyra"
Issues = "https://github.com/qyratech/qyra/issues"
Changelog = "https://github.com/qyratech/qyra/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/qyra"]

[tool.hatch.build.targets.sdist]
include = [
    "src/qyra",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "SIM105", "RUF006"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
ignore_missing_imports = true
